# CloakFrame

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.txt  VIDEO_ROADMAP.md
.github/workflows/: ci.yml  release.yml
cmake/: FindOnnxRuntimeLocal.cmake  RedactlyHarden.cmake
include/faceveil/: Detector.hpp  MainWindow.hpp  PlateDetector.hpp  ProcessorWorker.hpp  ScrfdFaceDetector.hpp  UpdateChecker.hpp
include/redactly/: DetectionGeometry.hpp  FaceDetection.hpp  ImageIo.hpp  MainWindow.hpp  MemoryBudget.hpp  ModelCatalog.hpp  Mosaic.hpp  OrtAcceleration.hpp  PathSafety.hpp  PlateDetector.hpp  ProcessorWorker.hpp  ReviewDialog.hpp  ScrfdFaceDetector.hpp  SettingsDialog.hpp  Tracking.hpp  VideoIo.hpp  VideoProcessor.hpp  YunetFaceDetector.hpp
scripts/: check_translations.py  entitlements.plist  package_linux.sh  package_macos.sh  package_windows.ps1
src/: CMakeLists.txt  ImageIo.cpp  MainWindow.cpp  MemoryBudget.cpp  ModelCatalog.cpp  Mosaic.cpp  OrtAcceleration.cpp  OutputPlan.cpp  PlateDetector.cpp  ProcessorWorker.cpp  ReviewDialog.cpp  ScrfdFaceDetector.cpp  SettingsDialog.cpp  Theme.cpp  Tracking.cpp  UpdateChecker.cpp  VideoIo.cpp  VideoProcessor.cpp  YunetFaceDetector.cpp  main.cpp
tests/: CMakeLists.txt  test_core.cpp  test_tracking.cpp  test_video_io.cpp
tools/: CMakeLists.txt  inspect_model.cpp  video_detect_stats.cpp
translations/: faceveil_ko.ts  redactly_ja.ts  redactly_ko.ts  redactly_zh_CN.ts
