function(add_redactly_test name)
    add_executable(${name} ${ARGN})
    if(MSVC)
        target_compile_options(${name} PRIVATE /UNDEBUG)
    else()
        target_compile_options(${name} PRIVATE -UNDEBUG)
    endif()
    target_link_libraries(${name} PRIVATE redactly_core)
    redactly_harden(${name})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_redactly_test(redactly_tests test_core.cpp)
add_redactly_test(redactly_tracking_tests test_tracking.cpp)
add_redactly_test(redactly_parallel_tests test_parallel.cpp)
add_redactly_test(redactly_video_io_tests test_video_io.cpp)
set_tests_properties(redactly_video_io_tests PROPERTIES SKIP_RETURN_CODE 77)
